--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nfriedly.oledsaver">
+    package="digital.incline.oledsaver">
 
     <!-- Required to act as a custom watch face. -->
     <uses-permission android:name="android.permission.WAKE_LOCK" />
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/preview"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@android:style/Theme.DeviceDefault">
@@ -21,7 +21,7 @@
             android:value="true" />
 
         <service
-            android:name=".OLEDSaver"
+            android:name="digital.incline.oledsaver.OLEDSaver"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_WALLPAPER">
             <meta-data
